--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,19 +1,35 @@
 .card {
     border-radius: var(--borderRadiusDefault);
     background-color: var(--white);
-    margin: 1rem 0;
+    margin: 2rem 0;
     padding: 2rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
     gap: 25px;
-    // TODO: mobile: flex direction coloumn
+    flex-direction: column;
 
     img {
         border-radius: var(--borderRadiusDefault);
         padding: 1rem;
         background: var(--charcoal);
+    }
+}
+
+// mobile first CSS, here we are adjusting layout for bigger screens
+@media screen and (min-width: 920px) {
+    section>div {
+        flex: 1 1 0;
+    }
+    .card {
+        flex-direction: row;
+
+        &:hover {
+            transform: scale(1.1);
+            transition: 0.2s ease-in;
+            box-shadow: 0px 3px 11px var(--shadow);
+        }
     }
 }
 
@@ -37,10 +53,18 @@
     }
 }
 
+.chip {
+    color: var(--white);
+    border-radius: var(--borderRadiusDefault);
+    padding: 0 1rem ;
+}
+
 .successful {
+    @extend .chip;
     background-color: var(--lightGreen);
 }
 
 .failed {
+    @extend .chip;
     background-color: var(--lightRed);
 }
