--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@
   padding: 2rem;
   background-color: var(--gray);
   font-size: 16px;
+  text-align: center;
 }
 
 body {
@@ -29,12 +30,12 @@ body {
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  color: var(--primary);
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+  &:hover {
+    color: var(--secondary);
+  }
 }
 
 select {
@@ -64,32 +65,3 @@ input {
     outline: 1px solid var(--secondary);
   }
 }
-
-button {
-  padding: 10px;
-  background: var(--primary);
-  font-family: inherit;
-  border: none;
-  border-radius: 7px;
-  font-size: 1rem;
-  color: var(--white);
-  cursor: pointer;
-
-  &:hover {
-    background: var(--primaryDark);
-    box-shadow: 0px 0px 7px var(--shadow);
-  }
-}
-
-// @media (prefers-color-scheme: light) {
-//   :root {
-//     color: #213547;
-//     background-color: #ffffff;
-//   }
-//   a:hover {
-//     color: #747bff;
-//   }
-//   button {
-//     background-color: #f9f9f9;
-//   }
-// }
